# QRender

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-run.sh  install-docker.sh  pyproject.toml  redeploy.sh  run.sh
.cursor/rules/: qrender-git.mdc
app/: gallery_winlab.py  main.py  qr_art.py  qr_validate.py  short_redirect.py
app/static/: admin.html  index.html  manifest.json  sw.js
scripts/: generate_microdot_qr.py  setup_env.py
