[project]
name = "qrender"
version = "0.1.0"
description = "Open-source starter for art-style QR code generation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.9",
  "qrcode[pil]>=7.4.2",
  "pillow>=10.3.0",
  "opencv-python-headless>=4.8.0",
  "zxing-cpp>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

